# scis

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  configure.ac  debug.s  decode_ops.c  lexer.l  main.c  resource.c  resource.h  sci0.c  sci11.c  sci11.s  scis.c  scis.h  symtab.c  symtab.h  test0.s  test2.s
test/: getangle.s  mergepoly.s  readnumber.s  readnumber_input.txt  sci2hello.s  subfuncs.h  symbols.h  test1.s
test/lib/: file.h
